kubernetes/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prod-svc-status-pin-api
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: prod-status-pin-api
